--- a/frontend/src/app/features/marketplace/marketplace-dashboard-buyer-page/marketplace-dashboard-buyer-page.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-dashboard-buyer-page/marketplace-dashboard-buyer-page.component.html
@@ -271,7 +271,7 @@
                       <a
                         [routerLink]="[
                           '/marketplace/products',
-                          request.product.self
+                          encodeUrlSafeBase64(request.product.self)
                         ]"
                         class="cool-button small-a marketplace-button font-weight-bold"
                       >
