--- a/frontend/src/app/features/marketplace/marketplace-product-sell-page/marketplace-product-sell-page.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-product-sell-page/marketplace-product-sell-page.component.html
@@ -31,7 +31,7 @@
                   <input
                     formControlName="title"
                     type="text"
-                    class="cool-input marketplace-input font-weight-bold"
+                    class="cool-input marketplace-input"
                     [attr.placeholder]="
                       'MARKETPLACE-PRODUCT-SELL-PAGE.TITLE' | translate
                     "
@@ -54,7 +54,7 @@
                   <input
                     formControlName="price"
                     type="text"
-                    class="cool-input marketplace-input font-weight-bold font-size-14"
+                    class="cool-input marketplace-input"
                     [attr.placeholder]="
                       'MARKETPLACE-PRODUCT-SELL-PAGE.MONEY' | translate
                     "
