--- a/frontend/src/app/features/feed/feed-post-content/feed-post-content.component.html
+++ b/frontend/src/app/features/feed/feed-post-content/feed-post-content.component.html
@@ -122,9 +122,14 @@
         </div>
       </form>
     </div>
+    <div *ngIf="loadingComments">
+      <div class="w-100">
+        <div class="loader w-100"></div>
+      </div>
+    </div>
 
     <!-- Display comments if available -->
-    <div *ngIf="comments && comments.length > 0; else noComments">
+    <div *ngIf="comments && comments.length > 0 && !loadingComments">
       <div *ngFor="let comment of comments" class="cool-comment w-100 p-3">
         <div class="comment-header f-r-sb-c mb-2">
           <div class="f-r-s-c">
@@ -147,7 +152,7 @@
         </div>
       </div>
     </div>
-    <ng-template #noComments>
+    <ng-template *ngIf="comments.length == 0 && !loadingComments">
       <div class="cool-comment">
         <div class="comment-body">
           {{ 'FEED-POST-CONTENT.NO_COMMENTS' | translate }}
