--- a/frontend/src/app/features/marketplace/marketplace-product-preview/marketplace-product-preview.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-product-preview/marketplace-product-preview.component.html
@@ -46,7 +46,7 @@
             <div class="col-12 font-weight-bold">
               <div class="f-r-s-c g-0">
                 <span class="price font-size-20">
-                  {{ product.price | currency : 'ARS' : 'symbol' : '1.0-2' }}
+                  {{ product.price | currency : 'USD' : 'symbol' : '1.0-2' }}
                 </span>
               </div>
             </div>
